tests/base/invalid/If_CompileFail_3.whiley
import * from whiley.lang.*

void f(bool z):
     if(z):
          for z in [1,2,3]:
            sys.out.println(Any.toString(z))
